...

#if DEBUG
    final class FakeRacingService: RacingService {
        static let ongoingHorseRace = RaceSummary(
            raceID: "e2e041dc-53f4-40c5-975d-4baf775e13a0",
            raceNumber: 6,
            meetingName: "Parx Racing",
            category: .horse,
            advertisedStart: AdvertisedStart(seconds: Date().timeIntervalSince1970 - 10)
        )
        static let greyhoundRace = RaceSummary(
            raceID: "6cb1e96c-acf1-471f-b5bd-0947692b90cc",
            raceNumber: 5,
...
                "b2e041dc-53f4-40c5-975d-4baf775e13a0": ongoingHorseRace,
                "f2e041dc-53f4-40c5-975d-4baf775e13a0": ongoingHorseRace,
            ]
        )

        func fetchRaces() async throws -> RacesDTO {
            if let stateString = ProcessInfo.processInfo.environment["STATE"],
               let stateData = stateString.data(using: .utf8),
               let state = try? JSONDecoder().decode(ViewState.self, from: stateData)
            {
                switch state {
                case .empty, .loading:
                    return RacesDTO(raceSummaries: [:])
...
